Adjusted central alignment of container and border-radius issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,8 @@
 }
 
 body {
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
   font-family: var(--mainFontFamily);
   text-align: center;
   display: flex;
@@ -50,6 +50,7 @@ body {
   max-width: 550px;
   border-radius: var(--borderRadius);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  overflow: hidden;
 }
 
 .topSection {
